revise background, fix connecting bug

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#000000</color>
     <color name="loginColor">#48300c</color>
     <color name="loginColorHint">#8848300c</color>
+    <color name="white">#ffffff</color>
 </resources>
